[gd_scene load_steps=2 format=3 uid="uid://bvirx2k4b34u7"]

[ext_resource type="Script" path="res://Scenes/Prototype/hud.gd" id="1_oq8vo"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oq8vo")

[node name="ScoreContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 83.0
grow_horizontal = 2
alignment = 1

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "SCORE:"

[node name="ScoreValue" type="Label" parent="ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "0"

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -213.0
offset_right = 576.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "GAME OVER!"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 415.0
offset_top = 233.0
offset_right = 737.0
offset_bottom = 291.0
placeholder_text = "Your name..."
alignment = 1
max_length = 12
clear_button_enabled = true

[node name="Button" type="Button" parent="LineEdit"]
layout_mode = 0
offset_left = 189.0
offset_top = 66.0
offset_right = 320.0
offset_bottom = 97.0
text = "Submit score"

[node name="ScorePanel" type="Panel" parent="."]
offset_left = 215.0
offset_top = 234.0
offset_right = 947.0
offset_bottom = 572.0

[node name="LeaderboardLabel" type="Label" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -457.0
offset_top = 11.0
offset_right = 457.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Leaderboard"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -306.5
offset_top = 68.0
offset_right = 306.5
offset_bottom = 108.0
grow_horizontal = 2
theme_override_constants/separation = 420

[node name="NameLabel" type="Label" parent="ScorePanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Name"

[node name="ScoreLabel" type="Label" parent="ScorePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 24
text = "Score"

[node name="ScrollContainer" type="ScrollContainer" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -230.0
offset_right = 308.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayersList" type="VBoxContainer" parent="ScorePanel/ScrollContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="."]
offset_left = 906.0
offset_top = 83.0
offset_right = 1052.0
offset_bottom = 149.0
theme_override_font_sizes/font_size = 42
text = "RETRY!"

[connection signal="pressed" from="LineEdit/Button" to="." method="save_score_lw"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
